Fix biography block height on tablet

--- a/public/app/css/styles.css
+++ b/public/app/css/styles.css
@@ -617,17 +617,18 @@ footer {
         margin-right: 0; } }
 @media (max-width: 980px) {
   .about .about-biography {
+    height: 0;
     opacity: 0;
     filter: alpha(opacity=0);
-    height: 0; } }
+    overflow: hidden; } }
 .about .about-more {
   float: none;
   width: auto;
   margin-right: auto;
   #margin-left: auto;
-  clear: both;
   margin-top: 16px;
-  margin-top: 1rem; }
+  margin-top: 1rem;
+  clear: both; }
   .about .about-more h3 {
     -webkit-border-top-right-radius: 3px;
     -moz-border-radius-topright: 3px;
@@ -638,9 +639,9 @@ footer {
     -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 -2px 0 rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 -2px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 -2px 0 rgba(0, 0, 0, 0.2);
-    font-weight: 400;
     padding: 8px 0;
-    padding: 0.5rem 0; }
+    padding: 0.5rem 0;
+    font-weight: 400; }
   .about .about-more ul li {
     text-align: left; }
   @media (max-width: 768px) {
