--- a/public/app/sass/layout/about/_biography.sass
+++ b/public/app/sass/layout/about/_biography.sass
@@ -16,5 +16,6 @@
       +per-row(3)
 
   +to($desktop)
-    +opacity(0)
     height: 0
+    +opacity(0)
+    overflow: hidden
